First time generating full frames. Decent, but still has bugs around the rough edges.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "commander": "latest",
 		"jade": "latest",
 		"ndarray": "latest",
+		//"phase-align": "latest",
 		"get-pixels": "latest",
 		"pngjs": "latest",
 		"supervisor": "latest"
