Initial support for s3...work in progress.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "commander": "latest",
 		"jade": "latest",
 		"ndarray": "latest",
-		//"phase-align": "latest",
 		"get-pixels": "latest",
 		"pngjs": "latest",
-		"supervisor": "latest"
+		"supervisor": "latest",
+		"aws-sdk": "latest"
     }
 }
