Ability to write frames right to aws.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "express": "latest",
         "request": "latest",
+		"mime": "latest",
         "tough-cookie": "latest",
         "cheerio": "latest",
         "commander": "latest",
