Use async to enforce series execution when batching filenames from s3

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"get-pixels": "latest",
 		"pngjs": "latest",
 		"supervisor": "latest",
-		"aws-sdk": "latest"
+		"aws-sdk": "latest",
+		"async": "latest"
     }
 }
