First semi workable version that gets color palettes in explore mode.  Requires a hack to colorthief to export the Canvas instance.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"pngjs": "latest",
 		"supervisor": "latest",
 		"aws-sdk": "latest",
-		"async": "latest"
+		"async": "latest",
+		"canvas": "latest",
+		"thief": "latest",
+		"stream-to-array": "latest"
     }
 }
