--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"aws-sdk": "latest",
 		"async": "latest",
 		"canvas": "latest",
-		"thief": "latest",
-		"stream-to-array": "latest"
+		"thief": "latest"
     }
 }
