--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"supervisor": "latest",
 		"aws-sdk": "latest",
 		"async": "latest",
-		"canvas": "latest",
-		"thief": "latest"
+		"thief": "latest",
+		"memory-streams": "latest"
     }
 }
